Bug 1006656. Ignore setLineDash calls with negative dash values. r=roc

--HG--
extra : rebase_source : 21c356a82618402f1665331348f5be42a640a465